--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mexico'"
+       "'USA'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = c\n",
+    "kindof_neighbors = None\n",
     "kindof_neighbors"
    ]
   },
