--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.add[] # add code here"
+    "None # add code here"
    ]
   },
   {
