Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,12 +298,10 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " ['Malta'],\n",
-       " ['Thailand'],\n",
-       " 'Malta',\n",
-       " 'Thailand']"
+       " ['Thailand']]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
