--- a/index.ipynb
+++ b/index.ipynb
@@ -247,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code here"
+    "countries.remove(['Malta']) # add code here"
    ]
   },
   {
@@ -263,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.remove(['Thailand')"
+    "countries.remove(['Thailand'])"
    ]
   },
   {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -297,13 +297,11 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " ['Malta'],\n",
-       " ['Thailand'],\n",
        " 'Malta',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
