Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[] = 'USA'  # add code here"
+    "countries[5] = 'USA'  # add code here"
    ]
   },
   {
