--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[5:6] = 'USA'  # add code here"
+    "countries[] = 'USA'  # add code here"
    ]
   },
   {
