Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.remove(['Thailand'])"
+    "countries.remove('U','S')"
    ]
   },
   {
