Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.remove('U','S')"
+    "countries.remove('U')"
    ]
   },
   {
@@ -279,18 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Croatia',\n",
-       " 'USA',\n",
        " 'Argentina',\n",
        " 'Mexico',\n",
        " 'USA',\n",
-       " 'U',\n",
        " 'S',\n",
        " 'A',\n",
        " 'New Mexico',\n",
@@ -303,7 +301,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
