--- a/index.ipynb
+++ b/index.ipynb
@@ -263,23 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-7bea8036f005>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries.remove('S')"
+    "countries.remove('A')"
    ]
   },
   {
@@ -291,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +289,6 @@
        " 'Argentina',\n",
        " 'Mexico',\n",
        " 'USA',\n",
-       " 'S',\n",
-       " 'A',\n",
        " 'New Mexico',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
@@ -313,7 +299,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[] = 'USA'  # add code here"
+    "countries[4] = 'USA'  # add code here"
    ]
   },
   {
